--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "amphitheatre_desktop",
+  "appTitle": "Amphitheatre Desktop",
   "@appTitle": {
     "description": "The title of the application"
   }
